[package]
name = "sputnikvm-dev"
version = "0.2.1"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Test RPC tool for Ethereum written in Rust"

[dependencies]
clap = "2.26"
secp256k1-plus = "0.5"
rand = "0.3.1"
sha3 = "0.6"
blockchain = "0.2"
etcommon-block = "0.5.1"
etcommon-trie = "0.3"
etcommon-bigint = "0.2"
etcommon-bloom = "0.2"
etcommon-rlp = "0.2"
etcommon-hexutil = "0.2"
lazy_static = "0.2"
jsonrpc-core = { version = "7.1" }
jsonrpc-http-server-plus = { version = "7.1" }
jsonrpc-macros-plus = { version = "7.1" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.3"
env_logger = "0.4"
hyper = { version = "0.6.16", optional = true }

sputnikvm = { git = "https://github.com/gallactic/sputnikvm"}
sputnikvm-stateful = { git = "https://github.com/gallactic/sputnikvm"}
sputnikvm-network-classic = { git = "https://github.com/gallactic/sputnikvm"}
sputnikvm-network-foundation = { git = "https://github.com/gallactic/sputnikvm"}
sputnikvm-network-ubiq = { git = "https://github.com/gallactic/sputnikvm"}
sputnikvm-network-ellaism = { git = "https://github.com/gallactic/sputnikvm"}
sputnikvm-network-expanse = { git = "https://github.com/gallactic/sputnikvm"}
sputnikvm-network-musicoin = { git = "https://github.com/gallactic/sputnikvm"}
sputnikvm-network-gallactic = { git = "https://github.com/gallactic/sputnikvm"}


[features]
frontend = ["hyper"]